<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/greeny"
    tools:context="com.gpsv2.bravo.bravo_gps_v2.DogActivity">

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="175dp"
        android:layout_height="175dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        app:srcCompat="@drawable/dog1" />

    <Button
        android:id="@+id/button8"
        android:layout_width="150dp"
        android:layout_height="40dp"
        android:layout_below="@+id/imageView3"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="18dp"
        android:background="@drawable/buttonshape"
        android:text="@string/add_photo"
        android:textColor="#000000"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/button8"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="24dp"
        android:textSize="16sp"
        android:textStyle="bold"
        android:text="@string/hunting_experience" />

    <RatingBar
        android:id="@+id/ratingBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView2"
        android:layout_marginBottom="10dp"
        android:layout_centerHorizontal="true"
 />

    <EditText
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:layout_alignLeft="@+id/editText"
        android:layout_alignStart="@+id/editText"
        android:layout_below="@+id/ratingBar"
        android:background="@drawable/editstyle"
        android:hint="@string/name"
        android:textAlignment="center"
        android:id="@+id/editText6" />

    <EditText
        android:id="@+id/editText"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:layout_below="@+id/editText6"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:background="@drawable/editstyle"
        android:hint="@string/date_of_birth"
        android:textAlignment="center" />

    <EditText
        android:id="@+id/editText2"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:layout_alignLeft="@+id/editText"
        android:layout_alignStart="@+id/editText"
        android:layout_marginTop="10dp"
        android:background="@drawable/editstyle"
        android:layout_below="@+id/editText"
        android:hint="@string/race"
        android:textAlignment="center" />

    <Button
        android:id="@+id/button5"
        android:layout_width="100dp"
        android:layout_height="40dp"
        android:layout_below="@+id/editText2"
        android:layout_centerHorizontal="true"
        android:background="@drawable/buttonshape"
        android:layout_marginTop="20dp"
        android:enabled="false"
        android:onClick="save"
        android:text="@string/save"
        android:textColor="#000000"
        android:textSize="24sp" />

</RelativeLayout>
