<?xml version="1.0" encoding="utf-8"?>


<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:gravity="center"
    android:background="@color/greeny"
    android:orientation="vertical" >


    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:layout_above="@+id/textView10"
        android:layout_alignEnd="@+id/TypeView"
        android:layout_alignRight="@+id/TypeView"
        android:layout_marginBottom="20dp"
        android:src="@drawable/nfc1" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/textView7"
        android:layout_alignRight="@+id/textView7"
        android:layout_centerVertical="true"
        android:text="@string/serial"
        android:textSize="18sp" />


    <TextView
        android:id="@+id/textSerial"
        android:layout_width="150dp"
        android:layout_height="30dp"
        android:layout_alignTop="@+id/textView8"
        android:layout_marginLeft="15dp"
        android:layout_marginStart="15dp"
        android:layout_marginBottom="20dp"
        android:layout_centerVertical="true"
        android:layout_toEndOf="@+id/textView5"
        android:layout_toRightOf="@+id/textView5"
        android:background="@drawable/editstyle"
        android:textAlignment="center" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView10"
        android:layout_marginTop="13dp"
        android:layout_toLeftOf="@+id/textSerial"
        android:layout_toStartOf="@+id/textSerial"
        android:text="@string/id"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/IDtextView"
        android:layout_width="150dp"
        android:layout_height="30dp"
        android:layout_alignLeft="@+id/textSerial"
        android:layout_alignStart="@+id/textSerial"
        android:layout_centerVertical="true"
        android:layout_below="@+id/imageView5"
        android:layout_marginBottom="20dp"
        android:background="@drawable/editstyle"
        android:textAlignment="center" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView8"
        android:layout_marginTop="12dp"
        android:layout_toLeftOf="@+id/textSerial"
        android:layout_toStartOf="@+id/textSerial"
        android:text="@string/type"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/TypeView"
        android:layout_width="100dp"
        android:layout_height="30dp"
        android:layout_alignLeft="@+id/textSerial"
        android:layout_centerVertical="true"
        android:layout_alignStart="@+id/textSerial"
        android:layout_marginBottom="20dp"
        android:layout_alignTop="@+id/textView11"
        android:background="@drawable/editstyle"
        android:textAlignment="center" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/textView11"
        android:layout_alignRight="@+id/textView11"
        android:layout_below="@+id/textView11"
        android:layout_marginTop="11dp"
        android:text="@string/warranty"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/textWarranty"
        android:layout_width="100dp"
        android:layout_height="30dp"
        android:layout_centerVertical="true"
        android:layout_alignLeft="@+id/TypeView"
        android:layout_alignStart="@+id/TypeView"
        android:layout_alignTop="@+id/textView7"
        android:layout_marginBottom="20dp"
        android:background="@drawable/editstyle"
        android:textAlignment="center" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/textView7"
        android:layout_alignRight="@+id/textView7"
        android:layout_below="@+id/textView7"
        android:layout_marginTop="13dp"
        android:text="@string/tagMessage"
        android:textSize="18sp"
        android:id="@+id/textView4" />

    <TextView
        android:id="@+id/tagMessage"
        android:layout_width="150dp"
        android:layout_height="30dp"
        android:layout_alignBaseline="@+id/textView4"
        android:layout_alignBottom="@+id/textView4"
        android:layout_alignLeft="@+id/textWarranty"
        android:layout_alignStart="@+id/textWarranty"
        android:layout_marginLeft="12dp"
        android:layout_marginStart="12dp"
        android:background="@drawable/editstyle"
        android:textAlignment="center"
        android:textSize="18sp" />
        />


    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/button"
        android:layout_alignStart="@+id/button"
        android:layout_below="@+id/tagMessage"
        android:layout_marginTop="13dp"
        android:text="@string/write_tag"
        android:textSize="18sp"></TextView>


    <EditText
        android:id="@+id/edit_message"
        android:layout_width="150dp"
        android:layout_height="30dp"
        android:layout_alignBottom="@+id/textView5"
        android:layout_alignLeft="@+id/tagMessage"
        android:layout_alignStart="@+id/tagMessage"
        android:background="@drawable/editstyle"
        android:hint="@string/message"
        android:textAlignment="center"
        android:textSize="18sp" />

    <Button
        android:id="@+id/button"
        android:layout_width="120dp"
        android:layout_height="40dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="17dp"
        android:background="@drawable/buttonshape"
        android:text="@string/write"
        android:textColor="#000000"
        android:textSize="24sp" />


</RelativeLayout>

