<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/greeny"
    tools:context="com.gpsv2.bravo.bravo_gps_v2.FirstActivity">


    <Button
        android:id="@+id/button2"
        android:layout_width="220dp"
        android:layout_height="40dp"
        android:layout_below="@+id/imageView"
        android:layout_marginTop="27dp"
        android:layout_centerHorizontal="true"
        android:background="@drawable/buttonshape"
        android:text="@string/read_write_tag"
        android:textColor="#000000"
        android:textSize="24sp" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_alignParentTop="true"
        android:layout_centerInParent="true"
        android:layout_marginTop="47dp"
        app:srcCompat="@drawable/bravodog" />

    <Button
        android:id="@+id/button4"
        android:layout_width="220dp"
        android:layout_height="40dp"
        android:layout_alignLeft="@+id/button2"
        android:layout_alignStart="@+id/button2"
        android:layout_below="@+id/button2"
        android:layout_marginTop="26dp"
        android:layout_centerInParent="true"
        android:background="@drawable/buttonshape"
        android:text="@string/my_details"
        android:textColor="#000000"
        android:textSize="24sp" />

    <Button
        android:id="@+id/button6"
        android:layout_width="220dp"
        android:layout_height="40dp"
        android:layout_alignLeft="@+id/button4"
        android:layout_alignStart="@+id/button4"
        android:layout_below="@+id/button4"
        android:layout_marginTop="29dp"
        android:layout_centerInParent="true"
        android:background="@drawable/buttonshape"
        android:text="@string/dog_data"
        android:textColor="#000000"
        android:textSize="24sp" />

    <Button
        android:id="@+id/button9"
        android:layout_width="220dp"
        android:layout_height="40dp"
        android:layout_alignLeft="@+id/button6"
        android:layout_alignStart="@+id/button6"
        android:layout_below="@+id/button6"
        android:layout_centerInParent="true"
        android:layout_marginTop="30dp"
        android:background="@drawable/buttonshape"
        android:text="@string/alerts"
        android:textColor="#000000"
        android:textSize="24sp" />

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_gravity="top|end"
        android:layout_marginTop="23dp"
        android:layout_toEndOf="@+id/button2"
        android:layout_toRightOf="@+id/button2"
        android:src="@drawable/ic_action_info"
        app:backgroundTint="#4C943A" />

</RelativeLayout>
